--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "re-base": "^2.6.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-router": "^3.0.2"
+    "react-router": "^3.0.2",
+    "underscore": "^1.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
