--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "react-scripts": "0.9.3"
   },
   "dependencies": {
+    "material-ui": "^0.17.1",
     "moment": "^2.17.1",
     "re-base": "^2.6.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-router": "^3.0.2",
+    "react-tap-event-plugin": "^2.0.1",
     "underscore": "^1.8.3"
   },
   "scripts": {
