--- a/package.json
+++ b/package.json
@@ -6,12 +6,11 @@
     "react-scripts": "0.9.3"
   },
   "dependencies": {
+    "firebase": "^3.7.4",
     "material-ui": "^0.17.1",
     "moment": "^2.17.1",
-    "re-base": "^2.6.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-router": "^4.0.0",
     "react-router-dom": "^4.0.0",
     "react-tap-event-plugin": "^2.0.1",
     "underscore": "^1.8.3"
