--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "firebase": "^3.7.4",
+    "jspdf": "^1.3.3",
     "material-ui": "^0.17.1",
     "moment": "^2.17.1",
     "react": "^15.4.2",
