--- a/functions/package.json
+++ b/functions/package.json
@@ -2,7 +2,8 @@
   "name": "functions",
   "description": "Firebase Functions",
   "dependencies": {
-    "firebase-admin": "^4.0.5",
-    "firebase-functions": "https://storage.googleapis.com/firebase-preview-drop/node/firebase-functions/firebase-functions-preview.latest.tar.gz"
+    "firebase-admin": "^4.2.1",
+    "firebase-functions": "https://storage.googleapis.com/firebase-preview-drop/node/firebase-functions/firebase-functions-preview.latest.tar.gz",
+    "nodemailer": "^4.0.1"
   }
 }
