--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "firebase": "^3.7.4",
     "material-ui": "^0.17.1",
     "moment": "^2.17.1",
+    "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-router-dom": "^4.0.0",
