--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
   },
   "dependencies": {
     "firebase": "^3.7.4",
-    "material-ui": "^0.17.1",
     "moment": "^2.17.1",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-router-dom": "^4.1.1",
-    "react-tap-event-plugin": "^2.0.1",
+    "semantic-ui-css": "^2.2.10",
+    "semantic-ui-react": "^0.68.0",
     "underscore": "^1.8.3"
   },
   "scripts": {
