--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "moment": "^2.17.1",
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
+    "react-datepicker": "^0.46.0",
     "react-dom": "^15.5.4",
     "react-router-dom": "^4.1.1",
     "semantic-ui-css": "^2.2.10",
